fix: iOS Safari overlap issue

--- a/src/css/blocks/_settings.scss
+++ b/src/css/blocks/_settings.scss
@@ -88,10 +88,6 @@
 	}
 }
 
-.popover-settings {
-
-}
-
 // Align settings
 .popover-settings form {
 	display: grid;
